<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_characters_layout_height"
    android:layout_margin="@dimen/item_characters_unit_margin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/item_character_card_background"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item_characters_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/character_image_desc"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/item_characters_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/item_characters_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <TextView
                android:id="@+id/item_characters_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="@dimen/text_indent"
                android:paddingEnd="@dimen/text_indent"
                android:textColor="@color/character_main_text"
                android:textSize="@dimen/character_name_text_size"
                app:layout_constraintBottom_toTopOf="@+id/item_characters_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_characters_line"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Character name" />

            <TextView
                android:id="@+id/item_characters_status"
                style="@style/character_status_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_indent"
                app:layout_constraintBottom_toTopOf="@+id/item_characters_header_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_characters_line"
                app:layout_constraintTop_toBottomOf="@+id/item_characters_title"
                tools:text="Character status" />

            <ImageView
                android:id="@+id/item_characters_status_circle"
                style="@style/character_status_circle"
                android:contentDescription="@string/status_circle_desc"
                app:layout_constraintBottom_toTopOf="@+id/item_characters_header_location"
                app:layout_constraintEnd_toEndOf="@+id/item_characters_status"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/item_characters_status"
                app:layout_constraintTop_toBottomOf="@+id/item_characters_title"
                tools:src="@drawable/alive_icon"/>

            <TextView
                android:id="@+id/item_characters_header_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_indent"
                android:paddingEnd="@dimen/text_indent"
                android:text="@string/item_characters_header_location_text"
                android:textColor="@color/character_header_text"
                android:textSize="@dimen/character_header_text_size"
                app:layout_constraintBottom_toTopOf="@+id/item_characters_body_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_characters_line"
                app:layout_constraintTop_toBottomOf="@+id/item_characters_status" />

            <TextView
                android:id="@+id/item_characters_body_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_indent"
                android:paddingEnd="@dimen/text_indent"
                android:textColor="@color/character_main_text"
                android:textSize="@dimen/character_body_text_size"
                app:layout_constraintBottom_toTopOf="@+id/item_characters_header_origin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_characters_line"
                app:layout_constraintTop_toBottomOf="@+id/item_characters_header_location"
                tools:text="Character location" />

            <TextView
                android:id="@+id/item_characters_header_origin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_indent"
                android:paddingEnd="@dimen/text_indent"
                android:text="@string/item_characters_header_episode_text"
                android:textColor="@color/character_header_text"
                android:textSize="@dimen/character_header_text_size"
                app:layout_constraintBottom_toTopOf="@+id/item_characters_body_origin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_characters_line"
                app:layout_constraintTop_toBottomOf="@+id/item_characters_body_location" />

            <TextView
                android:id="@+id/item_characters_body_origin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="@dimen/text_indent"
                android:paddingEnd="@dimen/text_indent"
                android:textColor="@color/character_main_text"
                android:textSize="@dimen/character_body_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_characters_line"
                app:layout_constraintTop_toBottomOf="@+id/item_characters_header_origin"
                tools:text="Character origin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>